--- a/index.html
+++ b/index.html
@@ -415,8 +415,7 @@ zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjneg
         // Brak innych gadżetów do inicjalizacji
     });
   </script>
-
-<script src="js/cookie-bar_auto.js">
+<script src="js/cookie-bar_smart.js">
 </script>
 </body>
 </html>
