--- a/dobrze.html
+++ b/dobrze.html
@@ -156,7 +156,7 @@ Jeśli planujesz dłuższy wypad – sprawdź też noclegi w okolicach Wieżycy 
           </p>
           <button id="accept-cookies">Akceptuję</button>
         </div>
-        <script src="js/cookie-bar.js"></script>
+        <script src="js/cookie-bar_smart.js"></script>
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
