--- a/fin.html
+++ b/fin.html
@@ -205,7 +205,7 @@ Nie bój się złota. Po prostu zrozum, jak działa.</p>
           </p>
           <button id="accept-cookies">Akceptuję</button>
         </div>
-        <script src="js/cookie-bar.js"></script>
+        <script src="js/cookie-bar_smart.js"></script></script>
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
