--- a/lokalnie.html
+++ b/lokalnie.html
@@ -279,7 +279,7 @@ Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopot
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_smart.js"></script>
   </script>
  </body>
 </html>
