--- a/notpl.html
+++ b/notpl.html
@@ -282,7 +282,7 @@ I myślałem, że to jest miasto, które gra operę i inwigilację jednocześnie
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_smart.js"></script>
   </script>
  </body>
 </html>
