--- a/pixel.html
+++ b/pixel.html
@@ -294,7 +294,7 @@ To radio jest dla tych, którzy pamiętają czasy tranzystorów, a jednocześnie
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_smart.js"></script>
   </script>
  </body>
 </html>
