--- a/prawo.html
+++ b/prawo.html
@@ -284,7 +284,7 @@ Czyż nie jest to lustrzane odwrócenie moralności i prawa?
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_smart.js"></script>
   </script>
  </body>
 </html>
