--- a/stand.html
+++ b/stand.html
@@ -329,7 +329,7 @@
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_smart.js"></script>
   </script>
  </body>
 </html>
