--- a/west.html
+++ b/west.html
@@ -322,7 +322,7 @@ https://www.faz.net/aktuell/politik/inland/polen-rechtsextreme-buergerwehren-wol
     Akceptuję
    </button>
   </div>
-  <script src="js/cookie-bar.js">
+  <script src="js/cookie-bar_smart.js"></script>
   </script>
  </body>
 </html>
