--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -260,15 +260,8 @@ Am Abend ergießt sich Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
       overlay.addEventListener('click', toggleMenu);
     }
   </script>
-  <div class="cookie-bar" id="cookie-bar">
-   <p>
-    Diese Website verwendet Cookies, um Ihnen das beste Erlebnis zu bieten.
-   </p>
-   <button id="accept-cookies">
-    Akzeptieren
-   </button>
-  </div>
-  <script src="../js/cookie-bar.js">
+  
+  <script src="../js/cookie-bar_smart.js">
   </script>
  </body>
 </html>
