--- a/de/chronograf_w.html
+++ b/de/chronograf_w.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <title>
             Danziger Chronograf – Tytuł Artykułu
 </title>
@@ -13,9 +13,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/>
-        <link href="css/section.css" rel="stylesheet" type="text/css"/>
-        <link href="css/cookie-bar.css" rel="stylesheet"/>
+        <link href="../css/theme.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/section.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/cookie-bar.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -227,7 +227,7 @@ Ist das nicht eine Art &bdquo;antideutscher Folklore in Danzig&ldquo; [5], wo ma
       overlay.addEventListener('click', toggleMenu);
     }
   </script>
-        <script src="js/cookie-bar_smart.js">
+        <script src="../js/cookie-bar_smart.js">
   </script>
     </body>
 </html>
