--- a/chronograf.html
+++ b/chronograf.html
@@ -28,7 +28,7 @@
 </path>
                 </svg>
             </button>
-            <a class="header-link" href="../index.html"> <h1 style="">
+            <a class="header-link" href="../index.html"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 12px;">
      DANZIGER <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/>
      REPORTER </h1> </a>
         </header>
@@ -127,7 +127,7 @@
                 <h1 class="article-title" style="">Weiße Giganten in Polen &ndash; Columbia nicht Pictures. Wie Sozialbetrug zu einem Mafia-Geschäft wird.</h1>
                 <p class="lead" style="">In einer deutschen Stadt, in Duisburg, führten die Behörden eine groß angelegte Razzia in einem riesigen Wohnhochhaus durch, das liebevoll &ldquo;Weißer Riese&rdquo; genannt wird</p>
                 <p class="author-date">Verfasst von der Redaktion |&nbsp; Veröffentlicht am: 2. August 2025</p>
-                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/RFK0VMnm/danzig-rat.jpg?text=danziger rathaus">
+                <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/m2BDmhmM/danzig-rat15.jpg?text=danziger rathaus">
                 <p class="image-caption">Rathaus von Danzig</p>
                 <div class="article-body">
                     <p style=""><b>In einer deutschen Stadt, in Duisburg, führten die Behörden eine groß angelegte Razzia in einem riesigen Wohnhochhaus durch, das liebevoll &ldquo;Weißer Riese&rdquo; genannt wird.</b> Die Kontrolle enthüllte Dutzende Fälle von Sozialbetrug, die sich, wie sich herausstellte, in großem Stil von organisierten kriminellen Gruppen strukturiert waren. [1]
@@ -167,8 +167,7 @@ Ist das nicht eine Art &bdquo;antideutscher Folklore in Danzig&ldquo; [5], wo ma
 </div>
                 <div class="editorial-info">
                     <p>
-      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig </p><a class="contact-btn" href="../kontakt.html">
-      Skontaktuj się z nami </a>
+      Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig </p><a class="contact-btn" href="../kontakt.html">kontakt</a>
                 </div>
             </div>
             <div class="vertical-strip">
