--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -59,17 +59,13 @@
                 </li>
                 <li> <a href=".././chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
-                <li>
-                    <a href="../lm.html">LUMEN MUNDI</a>
+                <li><a href="../lm.html">LUMEN MUNDI</a>
                 </li>
-                <li>
-                    <a href="../west.html">Z ZACHODU</a>
+                <li><a href="../west.html">Z ZACHODU</a>
                 </li>
-                <li>
-                    <a href="../fin.html">GDAŃSKI PORTFEL</a>
+                <li><a href="../fin.html">GDAŃSKI PORTFEL</a>
                 </li>
-                <li>
-                    <a href="../pixel.html">PIXEL &amp; PLOT: SPRAWDZIMY TO?</a>
+                <li><a href="../pixel.html">PIXEL &amp; PLOT: SPRAWDZIMY TO?</a>
                 </li>
             </ul>
         </div>
@@ -94,9 +90,14 @@
                     <p style="">&nbsp;<b>Während das ukrainische Thema im Kontext von Subventionsbetrug bereits zur Routine geworden ist, bilden die Belarussen eine weniger zahlreiche, aber ebenso anfällige Gruppe</b>. Die Methoden des Betrugs ähneln sich grundsätzlich. Man erinnere sich an das Ausmaß der Betrügereien im sogenannten &bdquo;40-Złoty+&ldquo;-Programm, in dem Wohnungseigentümer für die Unterbringung und Verpflegung ukrainischer Bürger 40 Złoty pro Tag vom Staat erhielten. Wie im FAZ-Artikel zu Recht festgestellt wurde: Je mehr der Staat Subventionen für Ausländerhilfe bereitstellt, desto attraktiver werden diese für Betrüger. Der Staat, der dieses Problem nur allzu gut kannte, beendete das Programm auf Antrag des Innenministeriums im Rahmen der sogenannten&rdquo;Abdichtung&rdquo;. Allerdings werden die Bürger der Ukraine und Belarus bereits weniger attraktiv als &bdquo;Werkzeuge&ldquo; für Banden. Viele von ihnen haben in Polen Freunde und Verwandte, die ihnen helfen können, Betrugsfälle bei der Staatsanwaltschaft, der Staatlichen Arbeitsinspektion oder anderen Behörden zu melden.</p>
                     <p style="">I<b>n letzter Zeit sind kolumbianische Bürger zu einem solchen &bdquo;nützlichen Werkzeug&ldquo; geworden</b>. Der Anfang war harmlos: &bdquo;Phantom&ldquo;-Arbeitsagenturen brachten Kolumbianer mit dem visafreien Regime nach Polen. Die unglücklichen Migranten lebten in dem Glauben, dass die Agentur für sie einen Antrag auf Arbeits- und Aufenthaltsgenehmigung gestellt hatte. Zum Beweis erhielten sie einen gelben Zettel von der polnischen Post &ndash; eine Empfangsbestätigung. Natürlich haben diese Agenturen keine Verträge oder Anträge eingereicht. Trotz zahlreicher Hinweise von Nichtregierungsorganisationen wird dieses Problem von den staatlichen Behörden ignoriert. Die lokale Presse in Pommern befasste sich nur einmal mit diesem Thema &ndash; als es Anfang Februar in Słupsk zu einer Massenschlägerei unter Kolumbianern kam. Niemand interessierte sich jedoch dafür, was diese eigentlich in Słupsk machten. &bdquo;Oh, Gastarbeiter&ldquo; &ndash; lautete die einfache Antwort. Leider fallen viele dieser Menschen unter die Definition von Opfern des Menschenhandels. Statt diese systematischen Missstände publik zu machen, konzentrieren sich polnische Medien oft auf Einzelfälle, die starke Emotionen hervorrufen. Nach den Präsidentschaftswahlen wurde die mediale Erzählung über angebliche Verbrechen durch Kolumbianer deutlich intensiviert. Es erschienen Berichte über Messerstechereien, Schlägereien oder Verhaftungen kolumbianischer Bürger, denen Menschenhandel vorgeworfen wurde. Eine solche einseitige Berichterstattung lenkt wirksam vom strukturellen Problem des Menschenhandels ab und ermöglicht es Arbeitsagenturen und organisierten Gruppen, weiterhin unbehelligt zu agieren.  Diese mediale Logik betrifft nicht nur Kolumbianer, sondern auch andere Nationalitäten &ndash; wie Venezolaner. Ein Beispiel dafür war ein Facebook-Post des ehemaligen Ministerpräsidenten Mateusz Morawiecki [3], in dem die Tragödie einer einzelnen Person benutzt wurde, um Angst vor einer ganzen Migrantengruppe zu schüren. Das Schlimmste ist, dass bekannte polnische Marken über Agenturen die Opfer solcher Praktiken beschäftigen &ndash; und angesichts der Wahlergebnisse könnte dies sogar noch als geschäftlich vorteilhaft angesehen werden.</p>
                     <p style=""><b>Die gesamte polnische Migrationspolitik lässt sich gewissermaßen in einem Spot der Partei Recht und Gerechtigkeit (PiS) aus dem Jahr 2018 zusammenfassen..</b> Wie die Organisation &bdquo;Otwarta Rzeczpospolita&ldquo; betont [4], zielte dieser darauf ab, die Gesellschaft vor Flüchtlingen und Migranten zu verängstigen &ndash; dargestellt als Bedrohung und Quelle von Kriminalität. Diese Denkweise, die auf Angst und Vorurteilen basiert, dominiert weiterhin die öffentliche Debatte. Ist das nicht eine Art &bdquo;antideutscher Folklore in Danzig&ldquo; [5], wo man zwar an Migranten und Touristen verdient (nicht immer auf ehrliche Weise), aber gleichzeitig patriotische Töne anschlägt?&nbsp;</p>
-                    <p style="">[1] https://www.faz.net/aktuell/politik/inland/weisse-riesen-in-duisburg-sozialbetrug-laesst-sich-nicht-wegsprengen-110616624.html](https://www.faz.net/aktuell/politik/inland/weisse-riesen-in-duisburg-sozialbetrug-laesst-sich-nicht-wegsprengen-110616624.html [2] https://danziger.report/archiwum/de/richtbrudovum260725.html [3] https://www.facebook.com/MorawieckiPL/posts/tragiczny-fina%C5%82-bestialskiego-ataku-emigranta-z-wenezueli-na-24-letni%C4%85-klaudi%C4%99-b/1270879174403137 [4] https://www.otwarta.org/antyimigrancki-spot-pis/ [5] https://wpolityce.pl/spoleczenstwo/210075-antyniemiecki-folklor-w-gdansku-niemcom-przeszkadza-rota-wybrzmiewajaca-z-ratuszowej-wiezy&nbsp;</p>
+                    <p style=""></p>
                 </div>
-                <div class="article-actions"><a href="../index.html" role="button" style="font-weight: 400;">Start page</a><a href="../comments.html" role="button" style="font-weight: 400;">Comment</a><a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a><a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a><a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
+                <div class="article-actions">
+                    <a href="../index.html" role="button" style="font-weight: 400;">Start page</a>
+                    <a href="../comments.html" role="button" style="font-weight: 400;">Comment</a>
+                    <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
+                    <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
+                    <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
                 </div>
                 <div class="section-separator"></div>
                 <div class="editorial-info">
