--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -14,6 +14,40 @@
         <link href="../css/theme.css" rel="stylesheet" type="text/css"/>
         <link href="../css/section.css" rel="stylesheet" type="text/css"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=UnifrakturMaguntia&display=swap">
+        <!-- Dodatkowe style dla źródeł, aby wyglądały spójnie -->
+        <style>
+            .article-sources {
+                margin-top: 30px;
+                padding-top: 20px;
+                border-top: 1px solid #ccc;
+            }
+            .article-sources p {
+                font-family: 'Merriweather', serif;
+                font-size: 16px;
+                font-weight: 700;
+                margin-bottom: 10px;
+            }
+            .article-sources ul {
+                list-style-type: none;
+                padding-left: 0;
+            }
+            .article-sources li {
+                margin-bottom: 8px;
+                scroll-margin-top: 20px; /* Zapewnia, że element nie jest zasłonięty przez nagłówek po kliknięciu linku */
+            }
+            .article-sources a {
+                color: #007bff;
+                text-decoration: none;
+            }
+            .article-sources a:hover {
+                text-decoration: underline;
+            }
+            .article-body a {
+                color: #007bff;
+                text-decoration: none;
+                font-weight: bold;
+            }
+        </style>
     </head>
     <body>
         <header>
@@ -38,7 +72,7 @@
                 </li>
                 <li> <a href="../kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href=".././chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
             </ul>
         </nav>
@@ -57,7 +91,7 @@
                 </li>
                 <li> <a href="../kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href=".././chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
                 <li><a href="../lm.html">LUMEN MUNDI</a>
                 </li>
@@ -79,23 +113,32 @@
             <div class="main-content">
                 <div class="ads google article-top-ad">
 </div>
-                <h1 class="article-title" style="">Weiße Giganten in Polen &ndash; Columbia nicht Pictures. Wie Sozialbetrug zu einem Mafia-Geschäft wird.</h1>
+                <h1 class="article-title" style="">Weiße Giganten in Polen – Columbia nicht Pictures. Wie Sozialbetrug zu einem Mafia-Geschäft wird.</h1>
                 <p class="lead" style="">In einer deutschen Stadt, in Duisburg, führten die Behörden eine groß angelegte Razzia in einem riesigen Wohnhochhaus durch, das liebevoll &ldquo;Weißer Riese&rdquo; genannt wird</p>
                 <p class="author-date">Verfasst von der Redaktion |  Veröffentlicht am: 2. August 2025</p>
                 <img alt="Duży obraz artykułu" class="article-main-image" src="https://i.postimg.cc/m2BDmhmM/danzig-rat15.jpgtext=Duży+Obraz+Artykułu"/>
                 <p class="image-caption">Rathaus von Danzig</p>
                 <div class="article-body">
-                    <p style="">I<b>n einer deutschen Stadt, in Duisburg, führten die Behörden eine groß angelegte Razzia in einem riesigen Wohnhochhaus durch, das liebevoll &ldquo;Weißer Riese&rdquo; genannt wird.</b> Die Kontrolle enthüllte Dutzende Fälle von Sozialbetrug, die sich, wie sich herausstellte, in großem Stil von organisierten kriminellen Gruppen strukturiert waren. [1] Diese mafiösen Strukturen nutzten eine Lücke im System aus, indem sie Bürger aus Rumänien und Bulgarien nach Deutschland brachten, die, offiziell unter der Adresse des &ldquo;Riesen&rdquo; gemeldet, eine Maschinerie zum Erschleichen von Sozialleistungen darstellten. Für jede Anmeldung und die Erledigung der Formalitäten kassierten die Banden Schutzgeld. Dieses System, obwohl den Behörden gut bekannt, blieb jahrelang ungestraft, und der Betrug wuchs zu gigantischen Ausmaßen an</p>
-                    <p style="">&bdquo;<b>Der Pole kann&rsquo;s &ndash; der Deutsche soll uns nicht ins Gesicht spucken&ldquo;</b> (Wie es in einem patriotischen polnischen Lied heißt &ndash; &quot;Rota&quot;-ein Ausdruck , der heute oft ironisch oder als Kommentar zu deutsch-polnischen Spannungen zitiert wird.) Polen steht Deutschland in diesen Erfahrungen in nichts nach. In unserem Artikel &bdquo;Bruderferajna Wileńska &ndash; Gdingener NGO Bruderferajna Wileńska &ndash; Gdingener NGO [2]. Ein rechtlich-historischer Fall&ldquo; haben wir bereits über den Präsidenten einer Gdingener NGO geschrieben, die, angeblich Hilfe leistend, Schutzgelder von Ausländern kassierte, die in von der UN (UNHCR &ndash; Hoher Flüchtlingskommissar der Vereinten Nationen) finanzierten Projekten beschäftigt waren. Wir haben es also mit demselben Mechanismus zu tun &ndash; der Ausnutzung der schwierigen Lage von Migranten und staatlicher Unterstützungssysteme, um durch organisierte Gruppen Gewinne zu erzielen. Im Artikel der FAZ werden Rumänen und Bulgaren erwähnt, die zu Werkzeugen in den Händen von Banden wurden. In der polnischen Realität sind ihre Entsprechungen Bürger aus der Ukraine und Belarus.</p>
-                    <p style="">&nbsp;<b>Während das ukrainische Thema im Kontext von Subventionsbetrug bereits zur Routine geworden ist, bilden die Belarussen eine weniger zahlreiche, aber ebenso anfällige Gruppe</b>. Die Methoden des Betrugs ähneln sich grundsätzlich. Man erinnere sich an das Ausmaß der Betrügereien im sogenannten &bdquo;40-Złoty+&ldquo;-Programm, in dem Wohnungseigentümer für die Unterbringung und Verpflegung ukrainischer Bürger 40 Złoty pro Tag vom Staat erhielten. Wie im FAZ-Artikel zu Recht festgestellt wurde: Je mehr der Staat Subventionen für Ausländerhilfe bereitstellt, desto attraktiver werden diese für Betrüger. Der Staat, der dieses Problem nur allzu gut kannte, beendete das Programm auf Antrag des Innenministeriums im Rahmen der sogenannten&rdquo;Abdichtung&rdquo;. Allerdings werden die Bürger der Ukraine und Belarus bereits weniger attraktiv als &bdquo;Werkzeuge&ldquo; für Banden. Viele von ihnen haben in Polen Freunde und Verwandte, die ihnen helfen können, Betrugsfälle bei der Staatsanwaltschaft, der Staatlichen Arbeitsinspektion oder anderen Behörden zu melden.</p>
-                    <p style="">I<b>n letzter Zeit sind kolumbianische Bürger zu einem solchen &bdquo;nützlichen Werkzeug&ldquo; geworden</b>. Der Anfang war harmlos: &bdquo;Phantom&ldquo;-Arbeitsagenturen brachten Kolumbianer mit dem visafreien Regime nach Polen. Die unglücklichen Migranten lebten in dem Glauben, dass die Agentur für sie einen Antrag auf Arbeits- und Aufenthaltsgenehmigung gestellt hatte. Zum Beweis erhielten sie einen gelben Zettel von der polnischen Post &ndash; eine Empfangsbestätigung. Natürlich haben diese Agenturen keine Verträge oder Anträge eingereicht. Trotz zahlreicher Hinweise von Nichtregierungsorganisationen wird dieses Problem von den staatlichen Behörden ignoriert. Die lokale Presse in Pommern befasste sich nur einmal mit diesem Thema &ndash; als es Anfang Februar in Słupsk zu einer Massenschlägerei unter Kolumbianern kam. Niemand interessierte sich jedoch dafür, was diese eigentlich in Słupsk machten. &bdquo;Oh, Gastarbeiter&ldquo; &ndash; lautete die einfache Antwort. Leider fallen viele dieser Menschen unter die Definition von Opfern des Menschenhandels. Statt diese systematischen Missstände publik zu machen, konzentrieren sich polnische Medien oft auf Einzelfälle, die starke Emotionen hervorrufen. Nach den Präsidentschaftswahlen wurde die mediale Erzählung über angebliche Verbrechen durch Kolumbianer deutlich intensiviert. Es erschienen Berichte über Messerstechereien, Schlägereien oder Verhaftungen kolumbianischer Bürger, denen Menschenhandel vorgeworfen wurde. Eine solche einseitige Berichterstattung lenkt wirksam vom strukturellen Problem des Menschenhandels ab und ermöglicht es Arbeitsagenturen und organisierten Gruppen, weiterhin unbehelligt zu agieren.  Diese mediale Logik betrifft nicht nur Kolumbianer, sondern auch andere Nationalitäten &ndash; wie Venezolaner. Ein Beispiel dafür war ein Facebook-Post des ehemaligen Ministerpräsidenten Mateusz Morawiecki [3], in dem die Tragödie einer einzelnen Person benutzt wurde, um Angst vor einer ganzen Migrantengruppe zu schüren. Das Schlimmste ist, dass bekannte polnische Marken über Agenturen die Opfer solcher Praktiken beschäftigen &ndash; und angesichts der Wahlergebnisse könnte dies sogar noch als geschäftlich vorteilhaft angesehen werden.</p>
-                    <p style=""><b>Die gesamte polnische Migrationspolitik lässt sich gewissermaßen in einem Spot der Partei Recht und Gerechtigkeit (PiS) aus dem Jahr 2018 zusammenfassen..</b> Wie die Organisation &bdquo;Otwarta Rzeczpospolita&ldquo; betont [4], zielte dieser darauf ab, die Gesellschaft vor Flüchtlingen und Migranten zu verängstigen &ndash; dargestellt als Bedrohung und Quelle von Kriminalität. Diese Denkweise, die auf Angst und Vorurteilen basiert, dominiert weiterhin die öffentliche Debatte. Ist das nicht eine Art &bdquo;antideutscher Folklore in Danzig&ldquo; [5], wo man zwar an Migranten und Touristen verdient (nicht immer auf ehrliche Weise), aber gleichzeitig patriotische Töne anschlägt?&nbsp;</p>
-                    <p style="">1)https://www.faz.net/aktuell/politik/inland/weisse-riesen-in-duisburg-sozialbetrug-laesst-sich-nicht-wegsprengen- 110616624.html 2)https://danziger.report/archiwum/de/richtbrudovum260725.html
-3)https://www.facebook.com/MorawieckiPL/posts/tragiczny-fina%C5%82-bestialskiego-ataku-emigranta-z-wenezueli-na-24-letni%C4%85-klaudi%C4%99-b/1270879174403137
-4)https://www.otwarta.org/antyimigrancki-spot-pis/
-5)https://wpolityce.pl/spoleczenstwo/210075-antyniemiecki-folklor-w-gdansku-niemcom-przeszkadza-rota-wybrzmiewajaca-z-ratuszowej-wiezy</p>
+                    <p style="">I<b>n einer deutschen Stadt, in Duisburg, führten die Behörden eine groß angelegte Razzia in einem riesigen Wohnhochhaus durch, das liebevoll &ldquo;Weißer Riese&rdquo; genannt wird.</b> Die Kontrolle enthüllte Dutzende Fälle von Sozialbetrug, die sich, wie sich herausstellte, in großem Stil von organisierten kriminellen Gruppen strukturiert waren. <a href="#source-1">[1]</a> Diese mafiösen Strukturen nutzten eine Lücke im System aus, indem sie Bürger aus Rumänien und Bulgarien nach Deutschland brachten, die, offiziell unter der Adresse des &ldquo;Riesen&rdquo; gemeldet, eine Maschinerie zum Erschleichen von Sozialleistungen darstellten. Für jede Anmeldung und die Erledigung der Formalitäten kassierten die Banden Schutzgeld. Dieses System, obwohl den Behörden gut bekannt, blieb jahrelang ungestraft, und der Betrug wuchs zu gigantischen Ausmaßen an</p>
+                    <p style="">&bdquo;<b>Der Pole kann&rsquo;s &ndash; der Deutsche soll uns nicht ins Gesicht spucken&ldquo;</b> (Wie es in einem patriotischen polnischen Lied heißt &ndash; <a href="https://de.wikipedia.org/wiki/Rota_(Lied)" target="_blank">"Rota"</a>-ein Ausdruck , der heute oft ironisch oder als Kommentar zu deutsch-polnischen Spannungen zitiert wird.) Polen steht Deutschland in diesen Erfahrungen in nichts nach. In unserem Artikel &bdquo;Bruderferajna Wileńska &ndash; Gdingener NGO Bruderferajna Wileńska &ndash; Gdingener NGO <a href="#source-2">[2]</a>. Ein rechtlich-historischer Fall&ldquo; haben wir bereits über den Präsidenten einer Gdingener NGO geschrieben, die, angeblich Hilfe leistend, Schutzgelder von Ausländern kassierte, die in von der UN (UNHCR &ndash; Hoher Flüchtlingskommissar der Vereinten Nationen) finanzierten Projekten beschäftigt waren. Wir haben es also mit demselben Mechanismus zu tun &ndash; der Ausnutzung der schwierigen Lage von Migranten und staatlicher Unterstützungssysteme, um durch organisierte Gruppen Gewinne zu erzielen. Im Artikel der FAZ werden Rumänen und Bulgaren erwähnt, die zu Werkzeugen in den Händen von Banden wurden. In der polnischen Realität sind ihre Entsprechungen Bürger aus der Ukraine und Belarus.</p>
+                    <p style="">&nbsp;<b>Während das ukrainische Thema im Kontext von Subventionsbetrug bereits zur Routine geworden ist, bilden die Belarussen eine weniger zahlreiche, aber ebenso anfällige Gruppe</b>. Die Methoden des Betrugs ähneln sich grundsätzlich. Man erinnere sich an das Ausmaß der Betrügerei w sogenannten &bdquo;40-Złoty+&ldquo;-Programm, in dem Wohnungseigentümer für die Unterbringung und Verpflegung ukrainischer Bürger 40 Złoty pro Tag vom Staat erhielten. Wie im FAZ-Artikel zu Recht festgestellt wurde: Je mehr der Staat Subventionen für Ausländerhilfe bereitstellt, desto attraktiver werden diese für Betrüger. Der Staat, der dieses Problem nur allzu gut kannte, beendete das Programm auf Antrag des Innenministeriums im Rahmen der sogenannten&rdquo;Abdichtung&rdquo;. Allerdings werden die Bürger der Ukraine und Belarus bereits weniger attraktiv als &bdquo;Werkzeuge&ldquo; für Banden. Viele von ihnen haben in Polen Freunde i Verwandte, die ihnen helfen können, Betrugsfälle bei der Staatsanwaltschaft, der Staatlichen Arbeitsinspektion oder anderen Behörden zu melden.</p>
+                    <p style="">I<b>n letzter Zeit sind kolumbianische Bürger zu einem solchem &bdquo;nützlichen Werkzeug&ldquo; geworden</b>. Der Anfang war harmlos: &bdquo;Phantom&ldquo;-Arbeitsagenturen brachten Kolumbianer mit dem visafreien Regime nach Polen. Die unglücklichen Migranten lebten in dem Glauben, dass die Agentur für sie einen Antrag auf Arbeits- und Aufenthaltsgenehmigung gestellt hatte. Zum Beweis erhielten sie einen gelben Zettel von der polnischen Post &ndash; eine Empfangsbestätigung. Natürlich haben diese Agenturen keine Verträge oder Anträge eingereicht. Trotz zahlreicher Hinweise von Nichtregierungsorganisationen wird dieses Problem von den staatlichen Behörden ignoriert. Die lokale Presse in Pommern befasste sich nur einmal mit diesem Thema &ndash; als es Anfang Februar in Słupsk zu einer Massenschlägerei unter Kolumbianern kam. Niemand interessierte sich jedoch dafür, was diese eigentlich in Słupsk machten. &bdquo;Oh, Gastarbeiter&ldquo; &ndash; lautete die einfache Antwort. Leider fallen viele dieser Menschen unter die Definition von Opfern des Menschenhandels. Statt diese systematischen Missstände publik zu machen, konzentrieren sich polnische Medien oft auf Einzelfälle, die starke Emotionen hervorrufen. Nach den Präsidentschaftswahlen wurde die mediale Erzählung über angebliche Verbrechen durch Kolumbianer deutlich intensiviert. Es erschienen Berichte über Messerstechereien, Schlägereien oder Verhaftungen kolumbianischer Bürger, denen Menschenhandel vorgeworfen wurde. Eine solche einseitige Berichterstattung lenkt wirksam vom strukturellen Problem des Menschenhandels ab und ermöglicht es Arbeitsagenturen i organizierten Gruppen, weiterhin unbehelligt zu agieren. Diese mediale Logik betrifft nicht nur Kolumbianer, sondern auch andere Nationalitäten &ndash; wie Venezolaner. Ein Beispiel dafür war ein Facebook-Post des ehemaligen Ministerpräsidenten Mateusz Morawiecki <a href="#source-3">[3]</a>, in dem die Tragödie einer einzelnen Person benutzt wurde, um Angst vor einer ganzen Migrantengruppe zu schüren. Das Schlimmste ist, dass bekannte polnische Marken über Agenturen die Opfer solcher Praktiken beschäftigen &ndash; und angesichts der Wahlergebnisse könnte dies sogar noch als geschäftlich vorteilhaft angesehen werden.</p>
+                    <p style=""><b>Die gesamte polnische Migrationspolitik lässt sich gewissermaßen in einem Spot der Partei Recht und Gerechtigkeit (PiS) aus dem Jahr 2018 zusammenfassen..</b> Wie die Organisation &bdquo;Otwarta Rzeczpospolita&ldquo; betont <a href="#source-4">[4]</a>, zielte dieser darauf ab, die Gesellschaft vor Flüchtlingen und Migranten zu verängstigen &ndash; dargestellt als Bedrohung i źródło von Kriminalität. Diese Denkweise, die auf Angst und Vorurteilen basiert, dominiert weiterhin die öffentliche Debatte. Ist das nicht eine Art &bdquo;antideutscher Folklore in Danzig&ldquo; <a href="#source-5">[5]</a>, wo man zwar an Migranten und Touristen verdient (nicht immer auf ehrliche Weise), aber gleichzeitig patriotische Töne anschlägt?&nbsp;</p>
+                    <p style=""></p>
                     <p style=""></p>
                 </div>
+                <!-- Sekcja ze źródłami zaktualizowana zgodnie z instrukcjami -->
+                <div class="article-sources">
+                    <p>Quellen:</p>
+                    <ul>
+                        <li id="source-1">[1] <a href="https://www.faz.net/aktuell/politik/inland/sozialbetrug-laesst-sich-nicht-wegsprengen-11867169.html" target="_blank">FAZ – „Sozialbetrug lässt sich nicht wegsprengen”</a></li>
+                        <li id="source-2">[2] <a href="../de/archiwum/richtbrudovum260725.html" target="_blank">Danziger Report – „Richtbrudovum”</a></li>
+                        <li id="source-3">[3] <a href="https://www.facebook.com/MorawieckiPL/posts/tragiczny-fina%C5%82-bestialskiego-ataku-emigranta-z-wenezueli-na-24-letni%C4%85-klaudi%C4%99-b/1270879174403137" target="_blank">Post M. Morawieckiego (Facebook)</a></li>
+                        <li id="source-4">[4] <a href="https://otwarta.org/wielki-przeglad-spotow-wyborczych-pis-2018/" target="_blank">Fundacja Otwarta</a></li>
+                        <li id="source-5">[5] <a href="https://wpolityce.pl/polityka/471010-antyniemiecki-folklor-w-gdansku" target="_blank">wPolityce – „Antyniemiecki folklor w Gdańsku”</a></li>
+                    </ul>
+                </div>
+                <!-- Koniec sekcji ze źródłami -->
                 <div class="article-actions">
                     <a href="../index.html" role="button" style="font-weight: 400;">Start page</a>
                     <a href="../comments.html" role="button" style="font-weight: 400;">Comment</a>
