--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -131,11 +131,11 @@
                 <div class="article-sources">
                     <p>Quellen:</p>
                     <ul>
-                        <li id="source-1">[1] <a href="https://www.faz.net/aktuell/politik/inland/sozialbetrug-laesst-sich-nicht-wegsprengen-11867169.html" target="_blank">FAZ – „Sozialbetrug lässt sich nicht wegsprengen”</a></li>
+                        <li id="source-1">[1] <a href="https://www.faz.net/aktuell/politik/inland/weisse-riesen-in-duisburg-sozialbetrug-laesst-sich-nicht-wegsprengen-110616624.html" target="_blank">FAZ – „Sozialbetrug lässt sich nicht wegsprengen”</a></li>
                         <li id="source-2">[2] <a href="../de/archiwum/richtbrudovum260725.html" target="_blank">Danziger Report – „Richtbrudovum”</a></li>
                         <li id="source-3">[3] <a href="https://www.facebook.com/MorawieckiPL/posts/tragiczny-fina%C5%82-bestialskiego-ataku-emigranta-z-wenezueli-na-24-letni%C4%85-klaudi%C4%99-b/1270879174403137" target="_blank">Post M. Morawieckiego (Facebook)</a></li>
-                        <li id="source-4">[4] <a href="https://otwarta.org/wielki-przeglad-spotow-wyborczych-pis-2018/" target="_blank">Fundacja Otwarta</a></li>
-                        <li id="source-5">[5] <a href="https://wpolityce.pl/polityka/471010-antyniemiecki-folklor-w-gdansku" target="_blank">wPolityce – „Antyniemiecki folklor w Gdańsku”</a></li>
+                        <li id="source-4">[4] <a href="https://www.otwarta.org/antyimigrancki-spot-pis/" target="_blank">Fundacja Otwarta</a></li>
+                        <li id="source-5">[5] <a href="https://wpolityce.pl/spoleczenstwo/210075-antyniemiecki-folklor-w-gdansku-niemcom-przeszkadza-rota-wybrzmiewajaca-z-ratuszowej-wiezy" target="_blank">wPolityce – „Antyniemiecki folklor w Gdańsku”</a></li>
                     </ul>
                 </div>
                 <!-- Koniec sekcji ze źródłami -->
